# quest-mod-template

./: .gitignore  .templatr  Android.mk  README.md  bmbfmod.json  buildBMBF.ps1  copy.ps1  makeTemplate.ps1  makeTemplate.sh
src/: main.cpp
template/: .gitignore  Android.mk  CMakeLists.txt  README.md  assets_include.cmake  bmbfmod.json  build.ps1  build.sh  buildBMBF.ps1  buildQMOD.ps1  buildQMOD.sh  buildQP.ps1  buildqmod.ps1  copy.ps1  copy.sh  createqmod.ps1  mktemplate.sh  mod.json  mod.template.json  ndk-stack.ps1  ndk-stack.sh  ndkpath.txt  qpm.json  qpm.shared.json  restart-game.sh  setup-package.ps1  start-logging.ps1  start-logging.sh  validate-modjson.ps1
template/.github/workflows/: build-ndk.yml
template/cmake/: debug.cmake  gtest.cmake  qpm.cmake  release.cmake  strip.cmake  vcpkg.cmake
template/cmake/builds/: release.cmake
template/cmake/targets/: android-ndk.cmake  linux-clang.cmake  windows-msvc.cmake
template/include/: _config.hpp  main.hpp
template/scripts/: build.ps1  copy.ps1  createqmod.ps1  start-logging.ps1  validate-modjson.ps1
template/src/: main.cpp
